--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 asgiref==3.5.2
+async-timeout==4.0.2
+Deprecated==1.2.13
 Django==3.2.13
+django-redis==5.2.0
+importlib-metadata==4.11.4
+mysqlclient==2.1.0
+packaging==21.3
+pyparsing==3.0.9
 pytz==2022.1
+redis==4.3.1
 sqlparse==0.4.2
 typing-extensions==4.2.0
+wrapt==1.14.1
+zipp==3.8.0
